&Back: Fixing Spacing and Animation

--- a/style.less
+++ b/style.less
@@ -144,7 +144,7 @@ body {
     animation: indefinite @timing linear infinite;
   }
   &.alt div {
-    animation: indefiniteBack @timing*2 linear infinite;
+    animation: indefiniteBack @timing*2 ease-in-out infinite;
   }
 }
 @keyframes indefinite {
@@ -153,7 +153,7 @@ body {
 }
 @keyframes indefiniteBack {
   0% { width: 10%; left: -20%; }
-  50% { width: 80%; left: 110%; }
+  50% { width: 100%; left: 110%; }
   100% { width: 10%; left: -20%; }
 }
 
@@ -161,7 +161,7 @@ body {
   #baseWidth;
   padding: 3rem;
   overflow: hidden;
-  margin-bottom: 2rem;
+  margin: 0 auto 3rem;
   &:before, &:after {
     content: '\276F';
     opacity: 0;
